--- a/Hanime/web/index.html
+++ b/Hanime/web/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit this template
--->
-<html>
-    <head>
-        <title>Hanime</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>Welcome to Hanime!</div>
-    </body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hanime</title>
+
+    <!-- link css -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/web-header.css">
+</head>
+
+<body>
+    <!-- web content -->
+    <header class="web-header">
+        <object data="assets/svg/text-logo.svg" height="40" class="logo"></object>
+
+        <nav class="nav-links">
+            <ul>
+                <li><a href="/">Trang chủ</a></li>
+                <li><a href="/">Tình cảm</a></li>
+                <li><a href="/">Người lớn</a></li>
+                <li><a href="/">Hot</a></li>
+                <li><a href="/">Chuyển sinh</a></li>
+            </ul>
+        </nav>
+
+        <!-- a simple form  -->
+        
+    </header>
+</body>
+
 </html>
