--- a/Frontend/forgot-password.html
+++ b/Frontend/forgot-password.html
@@ -17,6 +17,9 @@
 
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.1.0/mdb.min.css" rel="stylesheet" />
+
+    <!-- Recaptcha -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body>
@@ -121,7 +124,45 @@
     </nav>
     <hr class="hanime-hr">
     <section class="hanime-body">
+        <div class="hanime-responsive-form">
+            <div class="container">
+                <div class="card text-black" style="border-radius: 25px;">
+                    <div class="card-body p-md-5">
+                        <div class="row justify-content-center">
+                            <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
+                                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Forgot Password</p>
+
+                                <form class="mx-1 mx-md-4" method="post">
+
+                                    <div class="d-flex flex-row align-items-center mb-4">
+
+                                        <div class="form-outline flex-fill mb-0">
+                                            <input type="text" id="username" class="form-control" name="username"
+                                                autocomplete="off" pattern="\S{8,}" required />
+                                            <label class="form-label" for="username" data-error="Your Text"
+                                                data-success="right">Username</label>
+                                            <i class="fas fa-user fa-lg me-3 fa-fw trailing"></i>
+                                        </div>
+                                    </div>
+
+                                    <div class="g-recaptcha d-flex justify-content-center m-4"
+                                        data-sitekey="6LddfV4gAAAAALisBaSxK2pPSpzxE4YxdkXFXTWJ"></div>
+
+                                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                                        <button type="submit" class="btn btn-primary btn-lg">SEND EMAIL</button>
+                                    </div>
+
+                                </form>
+                            </div>
+                            <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+                                <img src="assets/signup-image.jpg" class="img-fluid rounded">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Custom JS -->
