--- a/Frontend/reset-password.html
+++ b/Frontend/reset-password.html
@@ -121,7 +121,52 @@
     </nav>
     <hr class="hanime-hr">
     <section class="hanime-body">
+        <div class="hanime-responsive-form">
+            <div class="container">
+                <div class="card text-black" style="border-radius: 25px;">
+                    <div class="card-body p-md-5">
+                        <div class="row justify-content-center">
+                            <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
+                                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Reset Password</p>
+
+                                <form class="mx-1 mx-md-4" method="post"
+                                    oninput="repassword.setCustomValidity(repassword.value !== password.value ? 'Confirm password does not match': '')">
+
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <input type="password" id="password" class="form-control" name="password"
+                                                required />
+                                            <label class="form-label" for="password">Password</label>
+                                        </div>
+                                    </div>
+
+                                    <div class="d-flex flex-row align-items-center mb-4">
+                                        <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                                        <div class="form-outline flex-fill mb-0">
+                                            <input type="password" id="repassword" class="form-control" required />
+                                            <label class="form-label" for="repassword">Repeat your
+                                                password</label>
+                                        </div>
+                                    </div>
+
+                                    <input type="hidden" name="token" value=""/>
+
+                                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                                        <button type="submit" class="btn btn-primary btn-lg">CHANGE PASSWORD</button>
+                                    </div>
+
+                                </form>
+                            </div>
+                            <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+                                <img src="assets/signup-image.jpg" class="img-fluid rounded">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Custom JS -->
