add: watch video, comment using realtime processing

--- a/Frontend/test.html
+++ b/Frontend/test.html
@@ -3,14 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Test Websocket</title>
 </head>
 
 <body>
-    
+    <script src="js/comment-websocket.js"></script>
+
+    <script>
+        const ws = new CommentWebSocket("ws://localhost:9999/Hanime/comment", 2, 1);
+
+        ws.onopen = function () {
+            console.log("Connected to server");
+            ws.get(0);
+        };
+
+        ws.onmessage = function (event) {
+            console.log(JSON.parse(event.data));
+        };
+    </script>
 </body>
 
 </html>
