--- a/Frontend/watch.html
+++ b/Frontend/watch.html
@@ -144,7 +144,7 @@
                         <h5>Comments</h5>
 
                         <script>
-                            
+
                         </script>
 
                         <div class="d-flex flex-row align-items-center mb-4">
@@ -161,8 +161,31 @@
                         </div>
                         <div class="border border-dark" id="hanime-comments">
 
-
-
+                            <div class="d-flex flex-column hanime-comment">
+                                <div class="d-flex align-items-center"><img
+                                        src="http://res.cloudinary.com/quang2002/image/upload/run6usa9xlfdzvwgywaw"
+                                        alt="avatar" width="30" height="30" class="rounded-circle m-2"><strong>Triệu
+                                        Đình Quang</strong>
+                                        <div class="border rounded p-1 m-2">
+                                            Cấp 4
+                                        </div>
+                                    </div>
+                                <p class="text-white-50" style="font-size: 14px; margin-left: 45px;">hảo phim</p>
+                            </div>
+                            <div class="d-flex flex-column hanime-comment">
+                                <div class="d-flex align-items-center"><img
+                                        src="http://res.cloudinary.com/quang2002/image/upload/run6usa9xlfdzvwgywaw"
+                                        alt="avatar" width="30" height="30" class="rounded-circle m-2"><strong>Triệu
+                                        Đình Quang</strong></div>
+                                <p class="text-white-50" style="font-size: 14px; margin-left: 45px;">hay lắm</p>
+                            </div>
+                            <div class="d-flex flex-column hanime-comment">
+                                <div class="d-flex align-items-center"><img
+                                        src="http://res.cloudinary.com/quang2002/image/upload/run6usa9xlfdzvwgywaw"
+                                        alt="avatar" width="30" height="30" class="rounded-circle m-2"><strong>Triệu
+                                        Đình Quang</strong></div>
+                                <p class="text-white-50" style="font-size: 14px; margin-left: 45px;">haha</p>
+                            </div>
                         </div>
                     </div>
                 </div>
